Improve registry error handling